# PokemonBattle

./: README.md
PokemonTrainingBattle/: README.md  battle.py  battle_outcomes.json  dict.json  its_time_to_battle.sh  pyproject.toml  setup.sh
PokemonTrainingBattle/helpers/: generate_pokemon_list.py  go_to_pvpoke.py
PokemonTrainingBattle/page_objects/: battle_page.py  pvpoke_page.py  train_page.py
PokemonTrainingBattle/plugins/: playwright.py
PokemonTrainingBattle/tests/: battle.py
