[tool.poetry]
name = "Poke"
version = "0.1.0"
description = ""
authors = ["Ian <Ian.allheim@gmail.com.com>"]

[tool.poetry.dependencies]
python = "^3.9"
playwright = "^1.17.2"
pytest = "^6.2"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

