[tool.poetry]
name = "Poke"
version = "0.1.0"
description = ""
authors = ["Ian <Ian.allheim@gmail.com.com>"]

# Set our internal pypi repository as the default source for packages
[[tool.poetry.source]]
name = "datto"
url = "https://pypi.datto.net/simple"
default = true

[tool.poetry.dependencies]
ottermation = { version = "^1.0.1", source = "datto" }
python = "^3.9"
playwright = "^1.17.2"
pytest-xdist = "^1.34"
hvac = "^0.11.2"
pytest = "^6.2"
pytest-flakefinder = "^1.0.0"
tomli = "^2.0.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.1.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

